@@ -1,3 +1,9 @@
+Sat Nov  5 13:52:52 2016  Akinori MUSHA  <knu@iDaemons.org>
+
+	* lib/shellwords.rb (Shellwords#shellsplit): Fix the handling of
+	  the backslash in double quotes to conform to the standard.
+	  [ruby-core:63807] [Bug #10055]
+
 Sat Nov  5 12:14:31 2016  Tanaka Akira  <akr@fsij.org>
 
 	* ext/pathname/pathname.c (Pathname#empty?): New method.
